--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
