--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
+    "formik": "^2.4.5",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "tailwindcss": "^3.3.6",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "zod": "^3.22.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
