--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
