--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-credit-cards": "^0.8.4",
+    "@types/react-input-mask": "^3.0.5",
+    "@types/react-transition-group": "^4.4.10",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
@@ -18,9 +21,12 @@
     "html2canvas": "^1.4.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.20.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.3.6",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.22.4",
